--- a/1-1.md
+++ b/1-1.md
@@ -1,12 +1,12 @@
-第零幕  最初之前
-１  
+第零幕  最初之前  
+1   
 在大楼的这一层往下看，马路上已经很难看清楚来往的车辆。再往下降一点，也许还能够听到汽车引擎和轮胎摩擦地面的噪声。可是在这种高度，取代原有熟悉城市声音的，是和车辆噪音一样无穷无尽的,风的交响。  
 	
 原本应该如此。在任何一座普通的摩天大楼的顶楼，原本是只能够听到呼啸的风声的。要是恐高的话，恐怕光是听到这声音，双腿就会不自觉地颤抖起来，就像一个快冻死的人总会忍不住大幅发抖一样。  
 	
 城市西南角一个从外表看上去完全普通的大楼。刚刚说的事实，在这里却不起作用。建筑最高的一层内，昏暗的空间里面，紧密排列的数字处理器集群，是原本就狭窄的房间显得更加狭隘不堪。而当数百台服务器一同运行，处理器风扇的轰鸣声和冷却系统的嗡嗡声便交汇在一起，变成持续高频的恶鬼之音。  
 	
-“艾利欧！我的外卖呢！！！”  
+“艾利欧(Ellio)！我的外卖呢！！！”  
 	
 巨大的轰鸣声中，仿佛能够听见这样一声用尽全力的嚎叫。  
 	
@@ -20,7 +20,7 @@
 	
 惨叫的主人，和外卖被偷走的受害者是同一个人，而刚刚盗窃的凶手，却变成了这次的受害者，变成了惨叫声的对象。名叫艾利欧的个体，身体从腹部往下，皆陷在狭窄的过道地板里，就像是被活活埋在了钢筋水泥之中一样，看起来已经失去了生机。  
 	
-他曾经的同事，泽尔，刚从震惊中恢复过来，顾不及收拾一旁掉落并且撒了一地的外卖午餐，蹲下身来检查情况。然而，出现在他的眼前的，却是令人震惊到石化的一幕。  
+他曾经的同事，泽尔(Zeul)，刚从震惊中恢复过来，顾不及收拾一旁掉落并且撒了一地的外卖午餐，蹲下身来检查情况。然而，出现在他的眼前的，却是令人震惊到石化的一幕。  
 	
 艾利欧腹部和地面的交界处，就像是缝合过一般，没有任何缝隙。就仿佛原本就是立在那里的一尊雕像，上身直立，背部微微前倾，双手张开成一个奇妙的角度，根本看不出一丝人为的痕迹。  
 	
@@ -30,4 +30,5 @@
 	
 泽尔瞳孔骤缩。一阵强光闪过，等到视力恢复之后，艾利欧和不速之客都不见了。一切就好像没有发生过，现场不再有任何异样，除了散落一地的外卖餐点。  
 	
-	
+[回到前言](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/README.md)  
+[下一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/1-2.md)
