--- a/1-2.md
+++ b/1-2.md
@@ -2,14 +2,56 @@
 2  
 普通的都市的一个普通的夏日。  
 
-从城市中心吹来的热浪让视野内的景色稍稍扭曲变形。就算是在比较发达的钢铁城市姆肯哈尔(Mukkunhal)，也有很多地方的冷却系统处于未运行状态。因为并不是主城区，城市南部二十二街到二十六街的贫穷区的环境冷却器，从城市建成的第一天就从未开启过。  
+从城市中心吹来的热浪让视野内的景色稍稍扭曲变形。就算是在比较发达的钢铁城市姆肯哈尔(Mukkunhal)，也有很多地方的冷却系统处于未运行状态。因为并不是主城区，城市南部黑话称为“垃圾堆”的二十二街到二十六街贫穷区，这里的环境冷却器，从城市建成的第一天就从未开启过。  
 
 这样的后果，就是落在金属幕墙上的鸟粪，被烤成脆脆的样子，又因为无人清扫，一层一层堆叠起来，变成了天然的白色墙壁涂层。远观上去，一大片金属架构建筑，无不是这种白色与铁锈的棕色混杂的颜色。原本脏乱无比的环境，有了一种异样的斑驳之感。  
 
 在如此高温下，穿行在低矮破败的金属迷宫间，稍有不慎就会有被烫伤的风险。  
 
-普通贫民窟的一间普通的屋子，半掩在杂乱的废品堆中。屋子角落堆叠的金属板下的荫凉处，突然有两只麻雀仓皇飞起，在空中无力地划过几条弧线，又落到不远处的另一个影子里面。惊起两只麻雀的人，正疾速穿行在杂物草草腾出的小路上，目光略过脚下，留意着可能绊倒自己的障碍物，身子不时灵活地侧斜，以免碰到从各种地方伸出来的废弃铁质水管而烫到自己。  
+普通贫民窟的一间普通的屋子，半掩在杂乱的废品堆中。  
 
---wip--  
+屋子角落堆叠的金属板下的荫凉处，突然有两只麻雀仓皇飞起，在空中无力地划过几条弧线，又落到不远处的另一个影子里面。惊起两只麻雀的人，正疾速穿行在杂物草草腾出的小路上，目光略过脚下，留意着可能绊倒自己的障碍物，身子不时灵活地侧斜，以免碰到从各种地方伸出来的废弃铁质水管而烫到自己。双手怪异地放在胸前，怀中抱着一个小包裹。   
+
+尽力保持平衡，步伐加快，深知身后正在追赶自己的白袍已经不可能被甩掉，泽尔仍然拼命去奔跑。只要争取到足够时间就够了，他这么想的同时，身后的人影突然加速，变成一道黑色的影子，以违反物理定律的方式穿过他和泽尔中间仅隔的一个屋脚，越过泽尔的身位，停在猎物面前。  
+
+因眼前的事物突然变化，脚步突然刹车，身子却不听话地向前倾，整个人扑到了地上。顿时，和地面接触的身体部位感受到了无法描述的热度。  
+
+“(╥﹏╥)呃啊......”突然遭受了炮烙的泽尔，忍着剧痛，从地上挣扎起来。  
+
+猎人一动也不动地站在前面，冷静地看着狼狈不堪的泽尔。眼前的年轻人身上已经脏痕累累，双腿不稳，但是双手仍然紧紧抱着怀中的东西不放。  
+
+“请投降。你可以考虑十秒钟。”穿着白色袍子的高大身影，在“垃圾堆”跑了这么久，身上居然一尘不染，泽尔煞是羡慕。这也许是魔法吧，呵，魔法。泽尔第一次有机会看见猎人的正脸——心里是这么想的，可惜过于刺眼的阳光以完美的角度射向泽尔，让他根本难以看清逆光的景象。  
+
+投降是不可能投降的。要是就这么把东西交给他，之前跑了那么久不就白费力气了吗？  
+
+自己争取了这么久的时间，那家伙怎么还不来救我啊......  
+
+十秒钟之后。  
+
+白袍抬起右手伸向猎物，泽尔隐约感觉他兜帽下的眼睛里发出了蓝光，心中暗叫不好。  
+
+朝向自己的右手手掌，掌心有一个五角星纹路发出了同样的色彩。这是咒术发动的前摇。泽尔知道这一点。虽然是最近才知道的，但是第一次见到魔法的景象已经深深刻在了脑海里。也正是因为知道这一点，他也感受到了绝望。  
+
+自己被骗了，可恶。  
+
+这么想着，周遭的景物变得扭曲变形，就像自己身处水中的气泡里面一样。  
+
+魔法发动了吧？效果是什么呢？失重感突然传来，泽尔下意识地想抓住什么东西。慌乱之中扔掉了怀中的包裹。  
+
+从半米高的空中难看地摔下来，摔到了和之前相比冰凉的地面。传送魔法(Space::Position.Transformation)确认。  
+
+眼睛还无法适应突然变暗的环境，耳边传来的声音如同甘霖。“干得不错。”与白袍无情的声音不同，这是一个充满戏谑感的音调。听到这句话，也就意味着刚刚发动转移魔法的人，并不是追赶泽尔整整四条街的白袍家伙。  
+
+终于有时间大口喘气，泽尔一话不发躺在地上，享受来之不易的安宁。  
+
+“别躺太久，小心感冒——”传来了关心人的话语。泽尔刚想接受关心的建议，准备爬起来，下一句接踵而至——“你要是感冒，就没有人给我跑腿了。”  
+
+白眼一翻，整个人重新赌气地重重躺回到地面上。这就是那个人的风格没办法啊。  
+
+卢克(Luke)和泽尔看上去年纪相仿，可他虽然是二十四五岁，眼中却有着同龄人没有的沧桑。这种感觉泽尔也有，不过那是每天爆肝的程序员独有的沧桑。  
+
+卢克把泽尔当成工具来使用，那还是差不多一个星期之前的事情。那个时候，泽尔的生活已经因为一场事故被彻底打乱。这时拯救者(Saver)卢克出现，把泽尔从迷茫中解放出来，从以前的生活中解放出来。  
+
+一切还是要从两星期前说起。
 
 [上一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/1-1.md)
