--- a/1-2.md
+++ b/1-2.md
@@ -54,4 +54,6 @@
 
 一切还是要从两星期前说起。
 
-[上一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/1-1.md)
+[上一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/1-1.md)  
+
+[下一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/1-3.md)  
