--- a/1-3.md
+++ b/1-3.md
@@ -41,4 +41,4 @@
 
 [上一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/1-2.md)  
 
-[不知道什么东西](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/1-2.md)  
+[不知道什么东西](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/%E5%86%99%E6%88%BF%E5%B1%8B%E7%9A%84%E9%82%A3%E4%B8%AA%E5%B0%8F%E8%AF%B4%EF%BC%8C%E4%B8%8D%E7%9F%A5%E9%81%93%E6%94%BE%E5%93%AA%E9%87%8C%EF%BC%8C%E5%B0%B1%E5%85%88%E4%BC%A0%E4%B8%8A%E6%9D%A5%E4%BA%86.md)  
