--- a/1-3.md
+++ b/1-3.md
@@ -27,7 +27,7 @@
 
 泽尔在自己家里惶惶度过了整整一天，浑浑噩噩，不知该去向何方。  
 
-发生了这样的事，呆在这里绝对会被当成嫌疑对象抓去审讯的吧。落到集团手里，自己这一生基本就结束了。泽尔想，自己虽然是贫民窟里的一只耗子，但好歹是一只有文化的耗子。记事起就是孤身一人的他，凭着青春的发愤图强，在救济站破烂的HNC(Hyper Network Centrum，大型网络中枢)终端里学会了系统级算法，之后还进入了地区执政的大型财团克拉费，在这里从E级拼搏到D级，马上就能拥有C级权限，其中经历的一切是其他人难以想象的。  
+发生了这样的事，呆在这里绝对会被当成嫌疑对象抓去审讯的吧。落到集团手里，自己这一生基本就结束了。泽尔想，自己虽然是贫民窟里的一只耗子，但好歹是一只有文化的耗子。记事起就是孤身一人的他，凭着青春的发愤图强，在救济站破烂的HNC(Hyper Network Centrum，超元网络中枢)终端里学会了系统级算法，之后还进入了地区执政的大型财团克拉费，在这里从E级拼搏到D级，马上就能拥有C级权限，其中经历的一切是其他人难以想象的。  
 
 前途就要看见光明了啊，居然就要在这里结束了。  
 
@@ -35,9 +35,53 @@
 
 迅速冷静下来，泽尔毅然舍弃了大楼里还算可以的住宅，悄无声息地从这里出发，潜到了不远的贫民窟身处。自己以前曾经在这里长大，如今回来了并没有多大变化，只是以前就已经破败不堪的屋子由于缺乏打理变得更加残缺，甚至无法将有人住的屋子和废铁堆区分开来。  
 
-来到了曾经的家门前。  
+回到了曾经的家。经过干燥而阴暗的地下走廊，来到熟悉的门前。缺乏酸性雨水的腐蚀，合金制成的门把手上的章鱼花纹仍然依稀可见。门锁早已被撬开，房间里已是家徒四壁，显然是经过了无数走投无路者的洗劫。  
 
---WIP--  
+还好，椅子还剩一把，床还剩半个架子。十步小的房间，经过简单的打理，很快有了能住的样子。  
+
+打开笔记本电脑。虽是古董但出于专家的泽尔的无微不至的保养，如今除了不适配大部分接口外，运行得非常不错。这是泽尔最心爱的物品，除此之外别无他物。  
+
+不敢接入HNC，他尝试着用通道连接WWW(World Wide Web，万维网)。成功了。  
+
+自从几年前HNC出现，WWW已经成了历史，上面只剩下很少的活跃者。泽尔有的时候会和有奇怪爱好的朋友一起使用WWW上仍在运行的社区聊天。而现在，是为了尽量减少自己的活动径迹。用了几个泽尔自己特殊加密过的跳板，现在，这世界上只有最顶级的黑客(Hacker)才能通过网络发现他。  
+
+正当他准备在暗网上发出求助申请的时候，门被推开了，“吱呀”地发出一声呻吟。两束目光穿过狭小的房间相遇。  
+
+“！！！！”门口的小女孩，发出了惊叫。泽尔发出了几乎一样的声音。  
+
+......  
+
+漫长的解释与交涉。  
+
+女孩子是拾荒者(Scavenger)，不久前才发现这个屋子。在这个废弃的救济站里，和泽尔家一样好撬的锁没有几个。拾荒者爱雅(Aya)，就是如此地幸运，找到了这样一间临时的庇护所。只是，发现没几天，还没有进行任何布置，物品也还没有进行转移。  
+
+就在决定好占领这个地方的同时，落魄的原主人泽尔回来了。  
+
+爱雅是一副快要哭出来的样子。对于一个拾荒者来说，家并不是那么重要，但是有一个固定而偏僻的地方用来存放自己的资产，是所有同行梦寐以求的。于是，两个人开始了以爱雅这一方完全不占优势的交涉。  
+
+眼前的女孩一副可怜兮兮的样子。身高只达到自己的腹部，保持距离地站在两步远处，抬头用一双澄澈的眼睛盯着自己看，眼神中不见商人谈判时的谨慎，完全是手足无措的感觉。  
+
+泽尔越是在这种时候就越冷静。晓之以情，动之以理，女孩子最终做出了放弃的决定。垂下双眸，失望地转身准备离去，泪水在出门前就不争气地滑出了眼眶。见此情景，泽尔实在是于心不忍。“等等——”他伸出手准备挽留女孩，决定做进一步商量。  
+
+就在手指尖刚刚要碰到爱雅时，接触处的一小片皮肤发出了紫光。轻微的一声响。爱雅惊讶地回头。  
+
+“不要碰我——”警告似乎出于善意而非厌恶。  
+
+在同一时刻，泽尔感觉自己仿佛触电了一般，指尖发麻。这种感觉迅速沿着手臂传到了胸腔。暗叫不好为时已晚，心脏骤停，泽尔就这么倒了下去。  
+
+紫光闪烁，扩大成黑影，里面闪现出来一个年轻男子。见到眼前的人，爱雅不禁偷偷地吸了一小口凉气。  
+
+“卢克大人......”  
+
+“你让开。”  
+
+“是......”  
+
+确认过受害者的身体情况，卢克神色严峻，手指尖在旁边的地上迅速地画了一个七芒星，又在其中三个角各画了两个符号。一束绿光一闪而过，之后房间内恢复了原有的照明。  
+
+两个站立着，一个人躺着，但是三个人有呼吸。卢克表情放松下来，但立马又板起脸。  
+
+“不是说过不到必要时不允许让别人碰到吗！说过多少遍这是致死量！要是我玩游戏起劲没心思相应传送，把人害死了怎么办！”
 
 [上一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/1-2.md)  
 
