--- a/1-3.md
+++ b/1-3.md
@@ -79,7 +79,7 @@
 
 确认过受害者的身体情况，卢克神色严峻，手指尖在旁边的地上迅速地画了一个七芒星，又在其中三个角各画了两个符号。一束绿光一闪而过，之后房间内恢复了原有的照明。  
 
-两个站立着，一个人躺着，但是三个人有呼吸。卢克表情放松下来，但立马又板起脸。  
+两个站立着，一个人躺着，但是三个人都有呼吸。卢克表情放松下来，但立马又板起脸。  
 
 “不是说过不到必要时不允许让别人碰到吗！说过多少遍这是致死量！要是我玩游戏起劲没心思相应传送，把人害死了怎么办！”
 
