--- a/1-3.md
+++ b/1-3.md
@@ -79,10 +79,12 @@
 
 确认过受害者的身体情况，卢克神色严峻，手指尖在旁边的地上迅速地画了一个七芒星，又在其中三个角各画了两个符号。一束绿光一闪而过，之后房间内恢复了原有的照明。  
 
-两个站立着，一个人躺着，但是三个人有呼吸。卢克表情放松下来，但立马又板起脸。  
+两个站立着，一个人躺着，但是三个人都有呼吸。卢克表情有一瞬间放松下来，但立马又板起脸。  
 
 “不是说过不到必要时不允许让别人碰到吗！说过多少遍这是致死量！要是我玩游戏起劲没心思相应传送，把人害死了怎么办！”
 
 [上一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/1-2.md)  
+
+[下一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/1-4.md)
 
 [不知道什么东西](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/%E5%86%99%E6%88%BF%E5%B1%8B%E7%9A%84%E9%82%A3%E4%B8%AA%E5%B0%8F%E8%AF%B4%EF%BC%8C%E4%B8%8D%E7%9F%A5%E9%81%93%E6%94%BE%E5%93%AA%E9%87%8C%EF%BC%8C%E5%B0%B1%E5%85%88%E4%BC%A0%E4%B8%8A%E6%9D%A5%E4%BA%86.md)  
