--- a/1-4.md
+++ b/1-4.md
@@ -47,16 +47,9 @@
 
 “我觉得我们要好好谈谈。”卢克神色比之前都凝重，朝着浑身不自在的泽尔说。依然没有理会爱雅，这让她有些许失望。他不出声地念了两句话，地板变成流沙下陷，将三个人埋进去以后，整个房屋恢复了沉寂。  
 
-5  
-不知过了多久，感觉像是从泥巴里边被吐了出来一样，整个人从陌生的地面浮上。  
-
-卢克有点等不及，开始了他的盘问。“你是什么时候接触魔法的？”作为一个不带有任何魔法气息的普通人，泽尔不可能对自己的符有那样的反应。  
-
-想到一天之前，自己刚刚经历了一场可怕的劫难，泽尔不仅打了一个寒颤。  
-
-“你先回答我的问题。”努力摆脱了昏沉的感觉，泽尔努力从对话中掌握提问的主导权。
-
 [上一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/1-3.md)  
+
+[下一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/1-5.md)
 
 ⑴ denpulsit = de + inpulsa + sit，使解除昏厥，在这里由于卢克没有控制好力度，对没有昏厥的爱雅起到了几乎相反的效果。  
 ⑵ inalgesplodo = inalgesco + displodo，冰霜新星。
