--- a/1-2.md
+++ b/1-2.md
@@ -16,7 +16,7 @@
 
 因眼前的事物突然变化，脚步突然刹车，身子却不听话地向前倾，整个人扑到了地上。顿时，和地面接触的身体部位感受到了无法描述的热度。  
 
-“(╥﹏╥)呃啊......”突然遭受了炮烙的泽尔，忍着剧痛，从地上挣扎起来。  
+“咕唔......”突然遭受了炮烙的泽尔，忍着剧痛，从地上挣扎起来。  
 
 猎人一动也不动地站在前面，冷静地看着狼狈不堪的泽尔。眼前的年轻人身上已经脏痕累累，双腿不稳，但是双手仍然紧紧抱着怀中的东西不放。  
 
