--- a/1-5.md
+++ b/1-5.md
@@ -85,4 +85,6 @@
 
 [上一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/1-4.md)  
 
+[下一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/1-6.md)
+
 P.S. 感谢@Constantino提供世界观构想。感谢你们的热情。(2019/06)
