--- a/1-1.md
+++ b/1-1.md
@@ -1,4 +1,4 @@
-第零幕  最初之前  
+第一幕  无人无辜  
 1   
 在大楼的这一层往下看，马路上已经很难看清楚来往的车辆。再往下降一点，也许还能够听到汽车引擎和轮胎摩擦地面的噪声。可是在这种高度，取代原有熟悉城市声音的，是和车辆噪音一样无穷无尽的,风的交响。  
 	
