--- a/1-3.md
+++ b/1-3.md
@@ -7,7 +7,7 @@
 
 凌晨两点。  
 
-“你确定这个时间还有外卖吗？”艾利欧问道。就算这栋大厦是位于贫民窟的边缘，由于是属于克拉费(Claffe)财团的不动产，楼上和楼下的景观可谓天差地别。城中心可以享受到的服务，这里基本都有。  
+“你确定这个时间还有外卖吗？”艾利欧问道。就算这栋大厦是位于贫民窟的边缘，由于是属于克拉费财团(Claffe Corp.)的不动产，楼上和楼下的景观可谓天差地别。城中心可以享受到的服务，这里基本都有。  
 
 刚刚的问话，只是一个玩笑。泽尔有点兴奋过头了，作为同事的艾利欧有一点过意不去。  
 
