--- a/1-6.md
+++ b/1-6.md
@@ -53,4 +53,6 @@
 
 古老的灰石街巷上，空位里，随处可见的水果贩子和粮食贩子正维持着他们的生计，吆喝声此起彼伏。顾客中，长着罕见绿色卷长发的高大女性，在摊上挑选着未经过辐射洗礼的番茄。像是感受到了什么，她将视线投向城中心的大教堂。慌张放下手中的篮子——那个小贩大声喊：“你的东西丢在我这里啦！”——没有理会他，她以敏捷的身法，游鱼般穿梭在集市人群间，快马加鞭向之前感知的方向前进。  
 
-[上一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/1-5.md) 
+[上一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/1-5.md)  
+
+[下一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/2-1.md)  
