--- a/2-1.md
+++ b/2-1.md
@@ -20,7 +20,7 @@
 
 凌晨2时29分，低轨上的固定轨道列车准时从中心银行姆肯哈尔分行建筑的面前驶过。在那一瞬间，车厢遮盖住了射向下面一段路的全部光芒。  
 
-奇怪的蜂鸣声响起，列车灯一下子熄灭了。黑暗持续了足足数秒。就在那之后，依稀可以看见门口一人从身子侧边将包裹用力一甩。什么东西碰上了金属大门，发出沉闷的回响。紧接着是震耳欲聋的爆炸，暗与亮的转换瞬间完成，百米范围的玻璃无不剧烈地震动着。几号秒后，强烈的气流将现场转变为一片狼藉。  
+奇怪的蜂鸣声响起，列车灯一下子熄灭了。黑暗持续了足足数秒。就在那之后，依稀可以看见门口一人从身子侧边将包裹用力一甩。什么东西碰上了金属大门，发出沉闷的回响。紧接着是震耳欲聋的爆炸，暗与亮的转换瞬间完成。两秒后，百米范围的玻璃无不剧烈地震动着，强烈的气流将现场转变为一片狼藉。  
 
 夹杂着火花的碎片和尘土四散纷飞。  
 
@@ -46,6 +46,6 @@
 
 以中心银行为中心的两条街，一直到高耸入云的克拉费通讯大厦，所有的大楼在一夜之间全部戒严，禁止任何人出入。十几个人的警力显然无法完成如此浩大的工作量，其中大部分是电子系统自动实行的。  
 
-第二天大早，就有相关新闻出现在网络上，不就它就会被更多时尚新闻覆盖，变成这个大都市漫漫罪行之海中不起眼的一条。  
+一大早，相关的新闻就出现了在网络上，不就它就会被更多时尚新闻覆盖，变成这个大都市漫漫罪行之海中不起眼的一条。  
 
 [上一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/1-6.md)  
