--- a/2-1.md
+++ b/2-1.md
@@ -49,3 +49,5 @@
 一大早，相关的新闻就出现了在网络上，不就它就会被更多时尚新闻覆盖，变成这个大都市漫漫罪行之海中不起眼的一条。  
 
 [上一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/1-6.md)  
+
+[下一节](https://github.com/wuyuema/Zeul-has-to-continue-his-magic-lesson-today/blob/master/2-2.md)  
